--- a/source/maximov.html
+++ b/source/maximov.html
@@ -459,7 +459,7 @@
     </div>
   </footer>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-  <script src="js/main.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
